# translator-bot

./: .env  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml
database/: database.py
handlers/: main.py
tests/: test_valid_variables.py  test_variables.py
