[tool.poetry]
name = "translator-bot"
version = "0.1.0"
description = ""
authors = ["Snayt1k3 <snayt1k3twitch@gmail.com>"]
readme = "README.md"
packages = [{include = "translator_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25.1"
deepl = "^1.15.0"
motor = "^3.2.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

